# MTG_GUI

./: CMakeLists.txt  DBOp.h  Database.h  README.md  main.cpp  mainwindow.h
Test/Qt/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui  test.cpp
Test/SQLite/: test.cpp
